Attempted fixing text-size on mobile.

--- a/css/post.css
+++ b/css/post.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: auto;
   margin-bottom: 1em;
-  max-width: calc(800px - (30px * 2));
+  max-width: 740px;
   padding-left: 1em;
   padding-right: 1em;
   border-radius: 0.5em;
@@ -23,9 +23,9 @@
 
 #main{
   margin: auto;
-  max-width: calc(800px - (30px * 2));
+  max-width: 740px;
   box-sizing: border-box;
-  padding: 1em;
+  padding: 15px;
   /* background: rgb(194, 194, 194); */
   border-radius: 0.5em;
 }
@@ -37,7 +37,6 @@
 }
 
 #main>p{
-  /* font-family: Georgia, 'Times New Roman', Times, serif; */
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 1.2em;
 }
@@ -67,7 +66,7 @@ pre > code {
   /* margin-bottom: -10px; */
   /* padding-top: 10px; */
   font-family: 'Courier', Courier, monospace;
-  font-size: 1em;
+  /* font-size: 1em; */
 
 
   /* display: block;
